--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "justedo2",
+  "name": "justedo",
   "dependencies": {
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-img": "2.0.0",
